# python_labs

./: README.md  main.py  mini_test.py  pyproject.toml  tets.py
data/: check.csv  input  report.csv
data/lab04/: input  input.txt  report.csv
data/lab08/: students_input.json
data/lab09/: students.csv
lib/: text.py
src/: README.md  README2.md
src/lab01/: 01_greeting.py  02_sum_avg.py  03_discount_vat.py  04_minutes_to_hhmm.py  05_initials_and_len.py  README.md  ex01.py  ex02.py
src/lab02/: README.md  README2.md  arrays.py  matrix.py  tuples.py
src/lab03/: README.md  text.py  text_stats.py
src/lab04/: README.md  io_txt_csv.py  text_report.py
src/lab05/: README.md  csv_xlsx.py  json_csv.py
src/lab06/: README.md  cli_convert.py  cli_text.py
src/lab07/: README.md
src/lab09/: README.md  group.py
src/lab10/: README.md  linked_list.py  structures.py
src/lib/: text.py
src/lib/lab08/: README.md  __init__.py  models.py  serialize.py
tests/: mini_test.py  test_json_csv.py  test_text.py  tets.py
